feat: finish time log and timelogs open api docs
