# docs/swagger.yaml
@@ -118,6 +118,48 @@ definitions:
       updated_at:
         type: string
     type: object
+  models.TimeLogPayload:
+    properties:
+      description:
+        maxLength: 255
+        minLength: 0
+        type: string
+      log_type_id:
+        type: integer
+      project_id:
+        type: integer
+      start_time:
+        type: string
+      team_id:
+        type: integer
+      user_id:
+        type: integer
+    required:
+    - log_type_id
+    - project_id
+    - start_time
+    - team_id
+    - user_id
+    type: object
+  models.TimeLogResponse:
+    properties:
+      description:
+        type: string
+      end_time:
+        type: string
+      id:
+        type: integer
+      log_type_id:
+        type: integer
+      project_id:
+        type: integer
+      start_time:
+        type: string
+      team_id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
   models.UserPayload:
     properties:
       email:
@@ -624,6 +666,131 @@ paths:
       summary: Update team
       tags:
       - Teams
+  /time-logs:
+    get:
+      consumes:
+      - application/json
+      description: Get all TimeLogs
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.TimeLogResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get all TimeLogs
+      tags:
+      - TimeLog
+    post:
+      consumes:
+      - application/json
+      description: Create a new TimeLog
+      parameters:
+      - description: TimeLog
+        in: body
+        name: time_log
+        required: true
+        schema:
+          $ref: '#/definitions/models.TimeLogPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.TimeLogResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Create a new TimeLog
+      tags:
+      - TimeLog
+  /time-logs/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a TimeLog
+      parameters:
+      - description: TimeLog ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Delete a TimeLog
+      tags:
+      - TimeLog
+    get:
+      consumes:
+      - application/json
+      description: Get a TimeLog
+      parameters:
+      - description: TimeLog ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.TimeLogResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get a TimeLog
+      tags:
+      - TimeLog
+    put:
+      consumes:
+      - application/json
+      description: Update a TimeLog
+      parameters:
+      - description: TimeLog ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: TimeLog
+        in: body
+        name: time_log
+        required: true
+        schema:
+          $ref: '#/definitions/models.TimeLogPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Update a TimeLog
+      tags:
+      - TimeLog
   /users:
     get:
       description: Get all users
