# models/time_log.go
@@ -12,7 +12,6 @@ type TimeLogPayload struct {
 	TeamID      uint      `json:"team_id" validate:"required"`
 	LogTypeID   uint      `json:"log_type_id" validate:"required"`
 	StartTime   time.Time `json:"start_time" validate:"required"`
-	EndTime     time.Time `json:"end_time"`
 	Description string    `json:"description" validate:"min=0,max=255"`
 }
 
@@ -26,6 +25,17 @@ type TimeLog struct {
 	TeamID      uint      `json:"team_id" gorm:"TYPE: integer REFERENCES teams(id)" validate:"required"`
 	Team        Team      `json:"team"`
 	StartTime   time.Time `json:"start_time" gorm:"not null" validate:"required"`
-	EndTime     time.Time `json:"end_time" gorm:"not null"`
+	EndTime     time.Time `json:"end_time" gorm:"default: null"`
 	Description string    `json:"description" gorm:"not null" validate:"required"`
+}
+
+type TimeLogResponse struct {
+	ID          uint      `json:"id"`
+	UserId      uint      `json:"user_id"`
+	LogTypeId   uint      `json:"log_type_id"`
+	ProjectId   uint      `json:"project_id"`
+	TeamId      uint      `json:"team_id"`
+	StartTime   time.Time `json:"start_time"`
+	EndTime     time.Time `json:"end_time"`
+	Description string    `json:"description"`
 }
